--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,6 @@ table{
 }
 caption{
     text-align: left; /* 제목 왼쪽 정렬 */
-    color: #006400; /* 테이블 제목 색 어두운 초록 */
 }
 th, td{
     border: 1px solid #000000; /* 테두리 추가 */
@@ -37,5 +36,8 @@ small{
     font-size: 0.8em;
 }
 .green-color{
-    color: green;
+    color: darkgreen;
+}
+.background{
+    background-color: darkgreen;
 }
